--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
   <title>Matchedge</title>
   <base href="/">
 
+  <style>
+    body {
+      overflow:hidden;  
+    }
+  </style>
+
   {{#unless environment.production}}
   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
   {{/unless}}
